# Control

./: .gitignore  CMakeLists.txt  Cuda&TRT installation  README.md  package.xml  referencedLinks.txt
config/: gps_config.yaml  sign_params.yaml
include/: LaneDetector.hpp  SignFastest.hpp  yolov8.h
launch/: bridge.launch  cameraNode.launch  cameraNodeReal.launch  cameraNodeRos.launch  sign.launch  signFastest.launch  signTrt.launch
models/: ningping12.pt  sissi11.engine
msg/: Light.msg
scripts/: RcBrainThread.py  control3.py  image_pub.py  lane.py  onnx_to_trt.py  save_frames.py  sign_onnx.py  sign_tensorrt.py  trt_export.py  try_trtInference.py
src/: CMakeLists.txt  cameraExample.cpp  cameraNode.cpp  cameraNode3.cpp  cameraNode4.cpp  cameraNodeRos.cpp  engine.cpp  lane.cpp  localization_bridge.cpp  sign.cpp  signFastest copy.cpp  signFastest.cpp  signFastest_old.cpp  signTRT.cpp  signTRT2.cpp
src/include/: yolov8.h
src/include/ncnn/: platform.h
src/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
src/lib/pkgconfig/: ncnn.pc
